--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -162,6 +162,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 .nav-tab-wrapper a.nav-tab {
 	background: transparent;
 	border: none;
+	border-bottom: 3px solid transparent;
 	padding: 1em 0em;
 	margin: 0 1.2em;
 	font-weight: 300;
