--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -255,6 +255,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 #wpo-wcpdf-preview-wrapper[data-preview-states="1"] .sidebar {
 	width: 100%;
 	padding-right: 0;
+	padding-top: 1em;
 }
 
 #wpo-wcpdf-preview-wrapper[data-preview-states="2"][data-preview-state="closed"] .sidebar {
