--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -243,6 +243,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 #wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td > textarea,
 #wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > textarea {
 	width: 100%;
+	max-width: none;
 }
 
 /* WPML */
