--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -336,7 +336,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 }
 
 .preview-document .preview {
-	width: 100%;
+	max-width: 30cm;
 	box-sizing: border-box;
 	background: white;
 	box-shadow: 0 0 35px -8px rgba(0, 0, 0, 0.12);
