--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -335,6 +335,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 }
 
 .preview-document .preview {
+	min-width: 10cm;
 	max-width: 30cm;
 	box-sizing: border-box;
 	background: white;
