--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -340,6 +340,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	box-sizing: border-box;
 	background: white;
 	box-shadow: 0 0 35px -8px rgba(0, 0, 0, 0.12);
+	-webkit-box-shadow: 0 0 35px -8px rgba(0, 0, 0, 0.12);
 }
 
 .preview-document .preview-data {
@@ -383,6 +384,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	top: 4em;
 	background: white;
 	box-shadow: 0 0 25px -10px rgba(0,0,0,0.2);
+	-webkit-box-shadow: 0 0 25px -10px rgba(0,0,0,0.2);
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -427,6 +429,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	width: 300px;
 	float: right;
 	box-shadow: 0 0 25px -10px rgba(0,0,0,0.2);
+	-webkit-box-shadow: 0 0 25px -10px rgba(0,0,0,0.2);
 	border-radius: 6px;
 	padding: 20px 0;
 	margin-top: -4px;
