--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -123,20 +123,36 @@ table.wcpdf_documents_settings_list td.title {
 }
 
 .wcpdf_document_settings_sections {
-	margin-top: 10px;
-	font-size: 120%;
+	margin-bottom: 40px;
 }
-.wcpdf_document_settings_sections li,
 .wcpdf_document_settings_sections ul {
+	padding: 10px 0em;
+	border-bottom: 1px solid #c3c4c7;
+}
+.wcpdf_document_settings_sections li {
 	display: inline;
+	background: transparent;
+	border: none;
+	border-bottom: 3px solid transparent;
+	padding: 10px 0em;
+	margin: 0 1.2em;
+	font-weight: 300;
+	font-size: 15px;
 }
-.wcpdf_document_settings_sections li + li:before {
-    content: " | ";
-}
-.wcpdf_document_settings_sections a.active {
+.wcpdf_document_settings_sections li a {
 	text-decoration: none;
-	font-weight: bold;
-	color: black;
+	color: #50575e;
+}
+.wcpdf_document_settings_sections li a:hover {
+	text-decoration: none;
+	color: #3c434a;
+}
+.wcpdf_document_settings_sections li.active {
+	border-bottom: 3px solid #51266b;
+}
+.wcpdf_document_settings_sections li.active a,
+.wcpdf_document_settings_sections li.active a:hover {
+	color: #000;
 }
 
 .edit-next-number {
