--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -286,6 +286,10 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	width: 100%;
 }
 
+#wpo-wcpdf-settings .wcpdf-attachment-settings-hint {
+	border-left: 4px solid #51266b;
+}
+
 #wpo-wcpdf-preview-wrapper[data-preview-states="1"] .sidebar {
 	width: 100%;
 	padding-right: 0;
