--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -186,6 +186,10 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	border-bottom: 3px solid #51266b;
 }
 
+.nav-tab-wrapper + :not(#wpo-wcpdf-preview-wrapper) {
+	margin-top: 15px !important;
+}
+
 #wpo-wcpdf-preview-wrapper {
 	width: 100%;
 	height: auto;
