--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -125,33 +125,61 @@ table.wcpdf_documents_settings_list td.title {
 .wcpdf_document_settings_sections {
 	margin-bottom: 40px;
 }
+
+.wcpdf_document_settings_sections > h2 {
+	cursor: pointer;
+}
+
 .wcpdf_document_settings_sections ul {
-	padding: 11px 0em;
-	border-bottom: 1px solid #c3c4c7;
+	background: white;
+	box-shadow: 0 0 25px -10px rgba(0,0,0,0.2);
+	-webkit-box-shadow: 0 0 25px -10px rgba(0,0,0,0.2);
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	min-width: 24em;
+	display: block;
+	height: auto;
+	display: none;
 }
-.wcpdf_document_settings_sections li {
-	display: inline;
-	background: transparent;
-	border: none;
-	border-bottom: 3px solid transparent;
-	padding: 10px 0em;
-	margin: 0 1.2em;
-	font-size: 15px;
+
+.wcpdf_document_settings_sections ul.active {
+	display: block;
 }
-.wcpdf_document_settings_sections li a {
+
+.wcpdf_document_settings_sections ul li {
+	box-sizing: border-box;
+	padding: 1.4em 1.6em;
+	margin-bottom: 0;
+	border-bottom: 1px solid #eaeaea;
+	font-size: 1.1em;
+}
+
+.wcpdf_document_settings_sections ul li:hover {
+	cursor: pointer;
+	background: #51266b;
+	color: white;
+}
+
+.wcpdf_document_settings_sections ul li:hover a {
+	color: white;
+}
+
+.wcpdf_document_settings_sections ul li a {
+	color: black;
 	text-decoration: none;
-	color: #50575e;
 }
-.wcpdf_document_settings_sections li a:hover {
-	text-decoration: none;
-	color: #3c434a;
+
+.wcpdf_document_settings_sections .arrow-down {
+	font-size: 0.8em;
+	color: #999;
+	margin-left: 8px;
+	font-weight: normal;
 }
-.wcpdf_document_settings_sections li.active {
-	border-bottom: 3px solid #51266b;
-}
-.wcpdf_document_settings_sections li.active a,
-.wcpdf_document_settings_sections li.active a:hover {
-	color: #000;
+
+.wcpdf_document_settings_sections p:hover,
+.wcpdf_document_settings_sections p:hover > .arrow-down { 
+	color: #222;
 }
 
 .edit-next-number {
@@ -279,7 +307,8 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	padding: 15px 10px 15px 0px !important;
 }
 
-#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="closed"] .sidebar .form-table > tbody > tr > th {
+#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="closed"] .sidebar .form-table > tbody > tr > th,
+#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="closed"] .wcpdf_document_settings_sections ul {
 	width: 300px !important;
 }
 
