--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -294,11 +294,16 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 #wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td > textarea,
 #wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > textarea {
 	max-width: none;
+	width: 100%;
 }
 
-#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td > input[type="text"]:not(#next_invoice_number),
-#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > input[type="text"]:not(#next_invoice_number) {
+#wpo-wcpdf-preview-wrapper .sidebar .form-table > tr > td > input[type="text"],
+#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > input[type="text"] {
 	width: 100% !important;
+}
+
+#wpo-wcpdf-preview-wrapper .sidebar .form-table > tbody > tr > td > input#next_invoice_number {
+	width: auto !important;
 }
 
 #wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="closed"] .sidebar .form-table > tbody > tr > th,
