--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -223,7 +223,6 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	height: auto;
 	position: relative;
 	overflow: hidden;
-	padding-bottom: 3em;
 }
 
 #wpo-wcpdf-preview-wrapper .sidebar,
@@ -372,6 +371,14 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	margin-left: -35%;
 }
 
+#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="full"] .sticky-spacer { /* disable sticky on full */
+	display: none !important;
+}
+#wpo-wcpdf-preview-wrapper[data-preview-states="3"][data-preview-state="full"] .preview { /* disable sticky on full */
+	position: relative !important;
+	left: auto !important;
+}
+
 #wpo-wcpdf-preview-wrapper .preview-document {
 	position: relative;
 	float: right;
@@ -418,17 +425,22 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	min-height: 400px;
 }
 
-.preview-document.sticky {
+.preview.sticky {
 	top: 30px !important;
 }
 
 .preview-document .preview {
 	min-width: 400px;
-	max-width: 900px;
+	text-align: center;
 	box-sizing: border-box;
-	background: white;
 	float: none;
 	margin: 0 auto;
+}
+
+.preview-document .preview > #preview-canvas {
+	max-width: 900px;
+	margin: 0 auto;
+	background: white;
 	box-shadow: 0 0 35px -8px rgba(0, 0, 0, 0.12);
 	-webkit-box-shadow: 0 0 35px -8px rgba(0, 0, 0, 0.12);
 }
