--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -419,6 +419,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 
 .preview.sticky {
 	top: 30px !important;
+	z-index: 99 !important;
 }
 
 .preview-document .preview {
