--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -9,8 +9,7 @@ span.wpo-warning {
 	position: relative;
 	min-height: 90px;
 	border: 1px solid #3D5C99;
-	background-color: #EBF5FF;	
-	border-radius: 5px;
+	background-color: #EBF5FF;
 	padding: 15px;
 	padding-left: 100px;
 	margin-top: 15px;
@@ -201,6 +200,10 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	padding: 1em;
 }
 
+.wrap .notice {
+	margin: 15px 0 0;
+}
+
 .nav-tab-wrapper a.nav-tab {
 	background: transparent;
 	border: none;
@@ -212,10 +215,6 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 
 .nav-tab-wrapper a.nav-tab.nav-tab-active {
 	border-bottom: 3px solid #51266b;
-}
-
-.nav-tab-wrapper + :not(#wpo-wcpdf-preview-wrapper) {
-	margin-top: 15px !important;
 }
 
 #wpo-wcpdf-preview-wrapper {
