--- a/assets/css/settings-styles.css
+++ b/assets/css/settings-styles.css
@@ -123,20 +123,25 @@ table.wcpdf_documents_settings_list td.title {
 
 .wcpdf_document_settings_sections {
 	margin-bottom: 40px;
+	border: 1px solid #eaeaea;
+	overflow: hidden;
 }
 
 .wcpdf_document_settings_sections > h2 {
 	cursor: pointer;
+	padding: 1em 0.8em;
+	margin: 0;
 }
 
 .wcpdf_document_settings_sections ul {
 	background: white;
-	box-shadow: 0 0 25px -10px rgba(0,0,0,0.2);
-	-webkit-box-shadow: 0 0 25px -10px rgba(0,0,0,0.2);
+	/*box-shadow: 0 0 25px -10px rgba(0,0,0,0.2);*/
+	/*-webkit-box-shadow: 0 0 25px -10px rgba(0,0,0,0.2);*/
 	list-style: none;
 	margin: 0;
 	padding: 0;
-	min-width: 24em;
+	width: 100%;
+	/*min-width: 24em;*/
 	display: block;
 	height: auto;
 	display: none;
@@ -148,9 +153,9 @@ table.wcpdf_documents_settings_list td.title {
 
 .wcpdf_document_settings_sections ul li {
 	box-sizing: border-box;
-	padding: 1.4em 1.6em;
+	padding: 0;
 	margin-bottom: 0;
-	border-bottom: 1px solid #eaeaea;
+	border-top: 1px solid #eaeaea;
 	font-size: 1.1em;
 }
 
@@ -167,13 +172,16 @@ table.wcpdf_documents_settings_list td.title {
 .wcpdf_document_settings_sections ul li a {
 	color: black;
 	text-decoration: none;
+	padding: 1.2em 1.6em;
+	display: block;
 }
 
 .wcpdf_document_settings_sections .arrow-down {
-	font-size: 0.8em;
+	font-size: 0.7em;
 	color: #999;
 	margin-left: 8px;
 	font-weight: normal;
+	float: right;
 }
 
 .wcpdf_document_settings_sections p:hover,
@@ -513,7 +521,7 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 
 .preview-document .preview-data ul li {
 	box-sizing: border-box;
-	padding: 1.4em 1.6em;
+	padding: 0;
 	margin-bottom: 0;
 	border-bottom: 1px solid #eaeaea;
 	font-size: 1.1em;
@@ -523,6 +531,11 @@ body.woocommerce_page_wpo_wcpdf_options_page {
 	cursor: pointer;
 	background: #51266b;
 	color: white;
+}
+
+.preview-document .preview-data ul li a {
+	display: block;
+	padding: 1.4em 1.6em;
 }
 
 .preview-document .preview-data .arrow-down {
